kubernetes/apps/keycloak/keycloak/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway-istio
  namespace: keycloak
spec:
  gatewayClassName: istio
  listeners:
    - name: https-keycloak
      hostname: login.chillincool.net
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: keycloak-tls
            kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: istio-gateway-internal
      namespace: network
      sectionName: https-keycloak
  hostnames:
    - login.chillincool.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8080
