kubernetes/apps/keycloak/keycloak/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: istio-gateway-internal
      namespace: network
      sectionName: https-keycloak
  hostnames:
    - login.chillincool.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8080
